[gd_scene load_steps=6 format=3 uid="uid://qhsofsnbhvfy"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1"]
[ext_resource type="Script" path="res://tensegrityexperiments/PickableStrut.gd" id="2"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(0.01, 0.01, 0.15)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(0.02, 0.02, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_46pdx"]
albedo_color = Color(0.235294, 1, 1, 1)

[node name="Strut" instance=ExtResource("1")]
collision_layer = 4096
collision_mask = 4096
script = ExtResource("2")
strut_length = 0.6
ranged_grab_method = 2

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("1")

[node name="MeshStrut" type="MeshInstance3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.3, 0, 0, 0)
mesh = SubResource("2")
surface_material_override/0 = SubResource("StandardMaterial3D_46pdx")

[node name="MeshStrut2" type="MeshInstance3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.3, 0, 0, 0)
visible = false
mesh = SubResource("2")

[connection signal="highlight_updated" from="." to="." method="_on_PickableStrut_highlight_updated"]
